                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 18-04-2006 fixed: tbn files with none ascii characters do not show up
 - 18-04-2006 updated: German language file (Thnx to sCAPe)
 - 18-04-2006 fixed: album info lookup
 - 18-04-2006 added: .FLV extension to XboxMediaCenter.xml
 - 17-04-2006 added: limited support for unloading dll's with debug symbols
 - 17-04-2006 updated: French language file
 - 16-04-2006 fixed: libsamba client didn't use nonblocking sockets during connection.. clienttimeout settings is now in xboxmediacenter.xml, defaults to 10 seconds
 - 16-04-2006 fixed: Webserver failed to play last.fm url's containing spaces (urlencoding).
 - 16-04-2006 fixed: Webserver failed to play asx url's.
 - 15-04-2006 changed: don't purge all samba connections on file close. (happened on each file when checking tags)
 - 15-04-2006 fixed: exception handling around our virtual filesystem to avoid exceptions propagating to main thread
 - 14-04-2006 fixed: Autorun would try to start a game disc as *something else* if autorun for games was not enabled.
 - 14-04-2006 fixed: [ 1469717 ] "My Files" [..] wrong contextmenu items
 - 13-04-2006 changed: content of cuesheets is converted to utf8
 - 13-04-2006 changed: content of playlists is converted to utf8
 - 13-04-2006 changed: unicode filenames from rar files are now read
 - 13-04-2006 fixed: mem leak in charset converter
 - 13-04-2006 fixed: window init sound for normal windows is not playing
 - 13-04-2006 fixed: List Icons and Thumb overlays would be rendered in the incorrect position the first frame, then would shift to the correct position.